# study_db

./: .gitignore  meson.build  study_db.c  unity_config.h
.cache/clangd/index/: record.c.647A0F630DBAB7F3.idx  record.c.DBDC3B8526DC0B01.idx  record.h.C6CC9089DE576C6A.idx  records.c.AA9E35EA3062DA48.idx  study_db.c.AA17B5D147BF5225.idx  study_db_test.c.71A7F8B148DF0F1F.idx  study_db_test.c.9704EBE26CBE55FE.idx  test_record.c.6915E3EE46E2C80E.idx  test_record.c.E2F42BD706F73A56.idx  types.h.5B3E1B679D1AE6AB.idx  types.h.E104A506F4250937.idx  unity.c.66AB921928612019.idx  unity.c.F239AB48CB566730.idx  unity.h.9F38A87D54B9F7DB.idx  unity.h.B667AA165BD5999F.idx  unity_config.h.EC7A8EA798540C03.idx  unity_internals.h.1A834B27B3971E34.idx  unity_internals.h.9758970FEF4DA935.idx
src/: types.h
src/endecoder/: endecoder.h
src/endecoder/impl/: simple_endecoder.c
src/record_manager/: offset_record.c  record.c  record.h  separator_record.c
src/record_manager/impl/: offset_record.c  separator_record.c
test/: random_types.c
test/endecoder/: test_endecoder.c
test/record_manager/: test_record.c
